--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.39.0",
     "@vercel/kv": "^3.0.0",
+    "redis": "^4.7.0",
     "next": "^15.1.0",
     "openai": "^4.80.0",
     "twitter-api-v2": "^1.18.2",
