Add reply system: auto-reply to mentions every 15min
- Twitter: getMentions(), postReply(), getTweet() for conversation context
- Claude: generateReply() with REPLY_SYSTEM_PROMPT (character-aware)
- Store: mention tracking, dedup, daily rate limiting (50/day)
- Orchestrator: processReplies() pipeline with 5/run cap
- Cron: /api/cron/replies every 15 min
- Manual: /api/manual/replies for dashboard trigger
- Dashboard: Reply Control panel with one-click mention processing

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
     {
       "path": "/api/cron/tweet",
       "schedule": "0 * * * *"
+    },
+    {
+      "path": "/api/cron/replies",
+      "schedule": "*/15 * * * *"
     }
   ]
 }
