--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.39.0",
     "@vercel/kv": "^3.0.0",
-    "redis": "^4.7.0",
     "next": "^15.1.0",
     "openai": "^4.80.0",
-    "twitter-api-v2": "^1.18.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "redis": "^4.7.0",
+    "sharp": "^0.34.5",
+    "twitter-api-v2": "^1.18.2"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
