--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
     {
       "path": "/api/cron/replies",
       "schedule": "*/15 * * * *"
+    },
+    {
+      "path": "/api/cron/notis",
+      "schedule": "*/2 * * * *"
     }
   ]
 }
